--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <script src="https://kit.fontawesome.com/d24203c984.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
@@ -17,35 +18,35 @@
                     <i class="bi bi-person text-secondary d-inline-flex justify-content-center align-items-center rounded-circle p-2 fs-4"></i>
                     <span class="username"></span>
                 </li>
-                <li class="tab available d-flex align-items-center justify-content-between gap-3 px-4 py-1 position-relative">
+                <li class="tab available text-secondary d-flex align-items-center justify-content-between gap-3 px-4 py-1 position-relative">
                     <i class="icon bi bi-star fs-2"></i>
                     <span class="tab-title flex-grow-1">Important</span>
-                    <small class="important-tasks text-secondary">1</small>
+                    <small class="important-tasks text-secondary"></small>
                 </li>
-                <li class="tab available active d-flex align-items-center justify-content-between gap-3 px-4 py-1 position-relative">
+                <li class="tab available text-secondary active d-flex align-items-center justify-content-between gap-3 px-4 py-1 position-relative">
                     <i class="icon bi bi-sun fs-2"></i>
                     <span class="tab-title flex-grow-1">My Day</span>
                     <small class="daily-tasks text-secondary">4</small>
                 </li>
-                <li class="tab d-flex align-items-center justify-content-between gap-3 px-4 py-1 position-relative">
+                <li class="tab text-secondary d-flex align-items-center justify-content-between gap-3 px-4 py-1 position-relative">
                     <i class="icon bi bi-calendar2-week fs-2"></i>
                     <span class="tab-title flex-grow-1">Planned</span>
                 </li>
-                <li class="tab d-flex align-items-center justify-content-between gap-3 px-4 py-1 position-relative">
+                <li class="tab text-secondary d-flex align-items-center justify-content-between gap-3 px-4 py-1 position-relative">
                     <i class="icon bi bi-house-check fs-2"></i>
                     <span class="tab-title flex-grow-1">Tasks</span>
                 </li>
-                <li class="tab d-flex align-items-center justify-content-between gap-3 px-4 py-1 position-relative">
+                <li class="tab text-secondary d-flex align-items-center justify-content-between gap-3 px-4 py-1 position-relative">
                     <i class="icon bi bi-star fs-2"></i>
                     <span class="tab-title flex-grow-1">Important</span>
                 </li>
-                <li class="tab d-flex align-items-center justify-content-between gap-3 px-4 py-1 position-relative">
+                <li class="tab text-secondary d-flex align-items-center justify-content-between gap-3 px-4 py-1 position-relative">
                     <i class="icon bi bi-sun fs-2"></i>
                     <span class="tab-title flex-grow-1">My Day</span>
                 </li>
             </ul>
         </aside>
-        <div class="col-9 col-lg-8 p-0">
+        <div class="col-9 col-lg-8 p-0 position-relative pb-5">
             <div class="header d-flex align-items-end justify-content-between text-white pt-5 pb-4 px-3">
                 <div class="infos pt-5">
                     <h1 class="title"></h1>
@@ -58,6 +59,15 @@
                     <button type="submit" class="search-btn bg-transparent border-0 text-white"><i class="search-icon bi bi-search fs-4"></i></button>
                 </form>
             </div>
+            <div class="content hide">
+                <div class="important-tasks-holder overflow-y-scroll">
+                </div>
+            </div>
+            <div class="content">
+                <div class="tasks-holder overflow-y-scroll">
+                </div>
+                <button class="add-btn d-flex align-items-center gap-2 position-absolute bottom-0 start-0 text-primary bg-transparent border-0  pt-3 pb-2 ps-4"><i class="bi bi-plus-lg fs-4"></i> Add a task</button>
+            </div>     
         </div>
     </main>
 
