--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body id="body" class="d-flex align-items-center justify-content-center">
     <main class="row bg-white mx-3">
-        <aside class="col-3 col-lg-4 p-0">
+        <aside class="col-3 col-lg-4 p-0 border-end">
             <ul class="list-unstyled fs-5">
                 <li class="tab d-flex align-items-center gap-2 position-relative px-4 pt-2 pb-3 mb-1">
                     <i class="bi bi-person text-secondary d-inline-flex justify-content-center align-items-center rounded-circle p-2 fs-4"></i>
