--- a/index.html
+++ b/index.html
@@ -6,27 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <script src="https://kit.fontawesome.com/d24203c984.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>To Do App</title>
 </head>
 <body id="body" class="d-flex align-items-center justify-content-center">
     <main class="row bg-white mx-3">
         <aside class="col-3 col-lg-4 p-0 border-end">
             <ul class="list-unstyled fs-5">
                 <li class="tab d-flex align-items-center gap-2 position-relative px-4 pt-2 pb-3 mb-1">
-                    <i class="bi bi-person text-secondary d-inline-flex justify-content-center align-items-center rounded-circle p-2 fs-4"></i>
-                    <span class="username"></span>
+                    <img class="user-image rounded-circle" src="images/user-image.jpg" alt="">
+                    <span class="username fw-bold"></span>
                 </li>
                 <li class="tab available text-secondary d-flex align-items-center justify-content-between gap-3 px-4 py-1 position-relative">
                     <i class="icon bi bi-star fs-2"></i>
                     <span class="tab-title flex-grow-1">Important</span>
-                    <small class="important-tasks text-secondary"></small>
+                    <small class="important-tasks text-secondary fw-normal"></small>
                 </li>
                 <li class="tab available text-secondary active d-flex align-items-center justify-content-between gap-3 px-4 py-1 position-relative">
                     <i class="icon bi bi-sun fs-2"></i>
                     <span class="tab-title flex-grow-1">My Day</span>
-                    <small class="daily-tasks text-secondary">4</small>
+                    <small class="daily-tasks text-secondary fw-normal"></small>
                 </li>
                 <li class="tab text-secondary d-flex align-items-center justify-content-between gap-3 px-4 py-1 position-relative">
                     <i class="icon bi bi-calendar2-week fs-2"></i>
@@ -46,32 +45,27 @@
                 </li>
             </ul>
         </aside>
-        <div class="col-9 col-lg-8 p-0 position-relative pb-5">
+        <div class="right-side col-9 col-lg-8 p-0 position-relative pb-5">
             <div class="header d-flex align-items-end justify-content-between text-white pt-5 pb-4 px-3">
                 <div class="infos pt-5">
                     <h1 class="title"></h1>
                     <span class="date fs-4"></span>
                 </div>
-                <form class="search-form d-flex align-items-center px-1 overflow-hidden" action="">
+                <div class="search-holder d-flex align-items-center px-1 overflow-hidden" action="">
                     <div class="input-wrapper">
                         <input class="search-input bg-transparent border-0 text-white ps-2" type="search" name="" id="" placeholder="Search...">
                     </div>
-                    <button type="submit" class="search-btn bg-transparent border-0 text-white"><i class="search-icon bi bi-search fs-4"></i></button>
+                    <button class="search-btn bg-transparent border-0 text-white position-relative"><i class="search-icon bi bi-search fs-4"></i></button>
                 </form>
             </div>
-            <div class="content hide">
-                <div class="important-tasks-holder overflow-y-scroll">
-                </div>
             </div>
             <div class="content">
-                <div class="tasks-holder overflow-y-scroll">
+                <div class="tasks-holder overflow-y-auto">
                 </div>
-                <button class="add-btn d-flex align-items-center gap-2 position-absolute bottom-0 start-0 text-primary bg-transparent border-0  pt-3 pb-2 ps-4"><i class="bi bi-plus-lg fs-4"></i> Add a task</button>
-            </div>     
+                <button class="add-btn d-flex align-items-center gap-2 position-absolute bottom-0 start-0 text-primary bg-transparent border-0  mt-3 mb-2 ms-4"><i class="bi bi-plus-lg fs-4"></i> Add a task</button>
+            </div>
         </div>
     </main>
-
-
-<script src="file.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
