--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </li>
             </ul>
         </aside>
-        <div class="right-side col-9 col-lg-8 p-0 position-relative pb-5">
+        <div class="right-side col-9 col-lg-8 p-0 position-relative pb-5 d-flex flex-column">
             <div class="header d-flex align-items-end justify-content-between text-white pt-5 pb-4 px-3">
                 <div class="infos pt-5">
                     <h1 class="title"></h1>
@@ -59,8 +59,8 @@
                 </form>
             </div>
             </div>
-            <div class="content">
-                <div class="tasks-holder overflow-y-auto">
+            <div class="content overflow-y-auto">
+                <div class="tasks-holder">
                 </div>
                 <button class="add-btn d-flex align-items-center gap-2 position-absolute bottom-0 start-0 text-primary bg-transparent border-0  mt-3 mb-2 ms-4"><i class="bi bi-plus-lg fs-4"></i> Add a task</button>
             </div>
